infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment #the name of the Deployment running in our cluster
spec:
  replicas: 1 # replicas is the number of pods we want to create
  selector:
    matchLabels: #looks at all the created pods and finds one with label 'app' matching 'event-bus'
      app: comments #label
  template: # describes how the pod(s) should be created by the Deployment
    metadata:
      labels:
        app: comments # an identifier/label for the pod that will be created by the Deployment
    spec:  #specification of the pod to be created
      containers:
        - name: comments # '-' means array
          image: 23101/comments
--- # Marks the end of a configuration / the beginning of another. In this case, we have the Deployment & Service config for a single pod in the same file.
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP # Even when 'type' is not specified, 'ClusterIP' is used by default.
  ports:
    - name: comments
      protocol: TCP
      port: 8002
      targetPort: 8002
