infra/k8s/posts-deployment.yaml
apiVersion: apps/v1 # unlike Pods which are in the bucket "v1", Deployments are in the bucket 'apps/v1'
kind: Deployment
metadata:
  name: posts-deployment #the name of the Deployment running in our cluster
spec: # 'spec' specifies how the Deployment should behave
  replicas: 1 # replicas is the number of pods we want to create
  selector:
    matchLabels: #looks at all the created pods and finds one with label 'app' matching 'posts' 
      app: posts #label
  template: # describes how the pod(s) should be created by the Deployment
    metadata:
      labels:  
        app: posts # an identifier/label for the pod that will be created by the Deployment
    spec:  #specification of the pod to be created
      containers:
        - name: posts # '-' means array
          image: 23101/posts


# selector and metadata tells the deployment the pod(s) to manage
# The 'labels' in Deployments are very similar in nature to the 'selector' in the 'Service' object type
---
apiVersion: v1
kind: Service
metadata: 
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP # Even when 'type' is not specified, 'ClusterIP' is used by default.
  ports: 
    - name: posts
      protocol: TCP
      port: 8001
      targetPort: 8001
