infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: # This annotaions section tells the Ingress Controller that we are going to feed it some routing rules. The ingress Controller continuously scans all the objects and config files for the annottation rules. 
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules: # rules is an array of all the routing rules we want to apply to teach the Ingress Controller on how to route incoming traffic to appropriate pods.
    - host: posts.com # ingress assumes that the app using this configuration is hosted at the domain 'posts.com'. we need to edit our hosts file (/etc/hosts) such that 'post.com' will point to our local machine instead of an outside domain (post.com) which might actually exist.
      http:
        paths:
          - path: /posts # path that receives incoming traffic to Posts app
            pathType: ImplementationSpecific
            backend: 
              service:
                name: posts-clusterip-srv # the clusterIP sevice endpoint for Posts app
                port:
                  number: 8001 # the port Posts app is running on
